--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ repository               : "naosher-mustakim"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "nma.jpg"
+  name             : "Naosher Mustakim"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Dedicated and curious researcher with a passion for advancing knowledge and making meaningful contributions. Eager to drive impactful discoveries through rigorous experimentation, data analysis, and critical thinking."
+  location         : "Chattogram, Bangladesh"
+  employer         : "Chittagong University of Engineering and Technology"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "naosher.mustakim@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
